syntax = "proto2";

package dev.vhonta.content.proto;

import "zio-temporal.proto";

message ContentFeedIntegrationNewsApiDetails {
  required string token = 1;
}

// TODO: add details
message ContentFeedIntegrationYoutubeDetails {
  required string accessToken = 1;
  required string refreshToken = 2;
  required int64 exchangedAt = 3;
  required int64 expiresInSeconds = 4;
}

enum ContentFeedIntegrationType {
  // Naming must be snake_case
  news_api = 1;
  youtube = 2;
}

message ContentFeedIntegration {
  required int64 id = 1;
  required zio.temporal.protobuf.UUID subscriber = 2;
  oneof integration {
    ContentFeedIntegrationNewsApiDetails newsApi = 3;
    ContentFeedIntegrationYoutubeDetails youtube = 4;
  }
}